# peregrine

./: .gitignore  Cargo.toml  LICENSE  README.md  clu.cabal  package.yaml  peregrine.cabal
app/: Main.hs
compiler/lc/: Cargo.toml
compiler/lc/src/: lib.rs  main.rs
compiler/lc_ast/: Cargo.toml
compiler/lc_ast/src/: decl.rs  expr.rs
compiler/lc_fs/: Cargo.toml
compiler/lc_fs/src/: virt.rs
compiler/lc_idx/: Cargo.toml
compiler/lc_idx/src/: indexed_vec.rs
compiler/lc_sem/: Cargo.toml
compiler/lc_sem/src/: pir.rs
compiler/lc_syn/: Cargo.toml
compiler/lc_syn/src/: lib.rs  offside.rs  parser.rs  tok.rs
compiler/lc_trie/: Cargo.toml
compiler/prgc/: Cargo.toml
compiler/prgc/src/: frontend.rs  lib.rs  main.rs
compiler/prgc_ast/: Cargo.toml
compiler/prgc_fs/: Cargo.toml
compiler/prgc_idx/: Cargo.toml
compiler/prgc_sem/: Cargo.toml
compiler/prgc_syn/: Cargo.toml
compiler/prgc_trie/: Cargo.toml
eyrie/: Cargo.toml
eyrie/src/: main.rs
future/: eyrie.toml  test.prg
future/Core/: Prelude.prg
peregrine/: Cargo.toml
peregrine/Core/: Category.prg
peregrine/src/: frontend.rs  fs.rs  lib.rs  pipeline.rs  semantics.rs  syntax.rs  trie.rs
planning/: benchmark_ideas.md  build_system.md  evaluation_strategy.md  ffi_safety.md  isomorphism_class.md  language_design.md  metaprogramming.md  module.md  motivation.md  naming_convention.md  operators_fixity.md  records.md  stdlib.md  the_rant.md  type_system.md
prgc/: Cargo.toml
prgc/src/: main.rs
src/Data/: Bitset.hs
src/Language/: Build.hs
test/: BitsetSpec.hs  Spec.hs
(+90 files in other folders)
