[package]
name = "lc"
edition = "2021"

[dependencies]
lc_ast = { path = "../lc_ast" }
lc_fs = { path = "../lc_fs" }
lc_idx = { path = "../lc_idx" }
lc_sem = { path = "../lc_sem" }
lc_syn = { path = "../lc_syn" }
lc_trie = { path = "../lc_trie" }
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.11"
