[package]
name = "prgc"
edition = "2021"

[dependencies]
prgc_ast = { path = "../prgc_ast" }
prgc_fs = { path = "../prgc_fs" }
prgc_idx = { path = "../prgc_idx" }
prgc_sem = { path = "../prgc_sem" }
prgc_syn = { path = "../prgc_syn" }
prgc_trie = { path = "../prgc_trie" }
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.11"
